# modbusua

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  changelog.md
cmake/: linux.cmake
doc/: CMakeLists.txt  Doxyfile-dev.in  Doxyfile-en.in  Doxyfile-ua.in  Doxyfile.in
doc/pages/: mainpage.md  page01_descr_gateway.md  (+22 more)
doc/pages-en/: mainpage.md  page01_descr.md  page01_descr_gateway.md  page02_data.md  page02_data_statusGateway.md  page02_data_statusModbus.md  page02_data_suffix.md  page03_sys.md  page03_sys_cfg.md  page03_sys_cmd.md  page04_port.md  page04_port_cfg.md  page04_port_cmd.md  page04_port_set.md  page04_port_stat.md  page05_device.md  page05_device_cfg.md  page05_device_cmd.md  page05_device_mb.md  page05_device_set.md  page05_device_stat.md  page06_cfg.md  page06_cfg_device.md  page06_cfg_port.md  page06_cfg_sys.md  page07_journal.md
doc/pages-ua/: mainpage.md  page01_descr.md  page01_descr_gateway.md  page02_data.md  page03_sys_cfg.md  page03_sys_cmd.md  page04_port.md  page04_port_cfg.md  page04_port_cmd.md  page04_port_set.md  page04_port_stat.md  page05_device_cfg.md  page05_device_cmd.md  page05_device_mb.md  page05_device_set.md  page05_device_stat.md  page06_cfg.md  page06_cfg_device.md  page06_cfg_port.md  page06_cfg_sys.md  page07_journal.md
examples/: PLC.csv  PLC1.conf  PLC2.conf  PLC3.conf  modbusua.conf
install/: CMakeLists.txt  modbusua.conf
install/linux/: modbusua.service  modbusuas.sh
install/linux/deb/: CMakeLists.txt
install/linux/deb/DEBIAN.in.d/: conffiles  control  postinst  prerm
install/linux/rpm/: CMakeLists.txt  modbusua.spec.in  tmp.txt
install/windows/: CMakeLists.txt  License.rtf  README.md  SETUP_GUIDE.md  modbusua.wxs  modbusua.wxs.in  modbusuas.bat  modbusuaservice.bat.in
src/: CMakeLists.txt  main.cpp  win_resource.rc  win_resource.rc.in
src/app/: CnApp.cpp  CnApp.h  CnAppConfig.cpp  CnAppConfig.h
src/app/items/: CnAppBaseItem.cpp  CnAppBaseItem.h  CnAppCfgItem.h  CnAppCmdItem.h
src/app/unix/: CnApp_unix.cpp
src/app/win/: CnApp_win.cpp
src/cfg/: CnCfgBase.cpp  CnCfgBase.h  CnCfgBuilder.cpp  CnCfgBuilder.h  CnCfgDevice.cpp  CnCfgDevice.h  CnCfgDeviceItem.h  CnCfgDeviceItemParser.cpp  CnCfgDeviceItemParser.h  CnCfgPort.h  CnCfgProject.cpp  CnCfgProject.h
src/core/: CnBaseItem.cpp  CnBaseItem.h  CnConfReader.cpp  CnConfReader.h  CnConfig.h  CnConfig.h.in  CnCore.h  CnCriticalSection.h  CnDateTime.cpp  CnDateTime.h  CnDateTime_p.h  CnDir.cpp  CnDir.h  CnDir_p.h  CnEvent.h  CnEventLoop.cpp  CnEventLoop.h  CnFile.cpp  CnFile.h  CnFileInfo.cpp  CnFileInfo.h  CnFileInfo_p.h  CnFile_p.h  CnGlobal.h  CnItemCsvReader.cpp  CnItemCsvReader.h  CnItemLexer.cpp  CnItemLexer.h  CnLog.cpp  CnLog.h  CnModbus.cpp  CnModbus.h  CnModbusClient.cpp  CnModbusClient.h  CnObject.cpp  CnObject.h  CnSharedPointer.h  CnString.cpp  CnString.h  CnString_p.h  (+9 more)
src/core/std/: CnStd_iostream.h  CnStd_sstream.h  CnStd_stdio.h  CnStd_string.cpp  CnStd_string.h
src/core/unix/: CnDateTime_p_unix.h  CnDateTime_unix.cpp  CnDir_p_unix.h  CnDir_unix.cpp  CnFileInfo_p_unix.h  CnFileInfo_unix.cpp  CnFile_p_unix.h  CnFile_unix.cpp  CnThread_unix.cpp  CnTimestamp_unix.cpp  CnUnix.h  CnUtils_unix.cpp
src/core/win/: CnDateTime_p_win.h  CnDateTime_win.cpp  CnDir_p_win.h  CnDir_win.cpp  CnFileInfo_p_win.h  CnFileInfo_win.cpp  CnFile_p_win.h  CnFile_win.cpp  CnThread_win.cpp  CnTimestamp_win.cpp  CnUtils_win.cpp  CnWindows.h
src/device/: CnDevice.cpp  CnDevice.h  CnDeviceConfig.cpp  CnDeviceConfig.h  CnDeviceRunnable.cpp  CnDeviceRunnable.h  CnDeviceStat.cpp  CnDeviceStat.h
src/device/items/: CnDeviceBaseItem.cpp  CnDeviceBaseItem.h  CnDeviceCfgItem.h  CnDeviceCmdItem.h  CnDeviceItemList.cpp  CnDeviceItemList.h  CnDeviceModbusItem.cpp  CnDeviceModbusItem.h  CnDeviceSetItem.h  CnDeviceStatItem.h
src/device/messages/: CnDeviceMessage.cpp  CnDeviceMessage.h  CnDeviceMessageBase.cpp  CnDeviceMessageBase.h  CnDeviceMessageList.cpp  CnDeviceMessageList.h
src/log/: CnLogger.cpp  CnLogger.h  CnLoggerConsole.cpp  CnLoggerConsole.h  CnLoggerFile.cpp  CnLoggerFile.h  CnLoggerManager.cpp  CnLoggerManager.h  CnLoggerSystem.h
src/log/unix/: CnLoggerSystem_unix.cpp
src/log/win/: CnLoggerSystem_win.cpp
src/port/: CnPort.cpp  CnPort.h  CnPortConfig.cpp  CnPortConfig.h  CnPortRunnable.cpp  CnPortRunnable.h  CnPortStat.cpp  CnPortStat.h  CnPortThread.cpp  CnPortThread.h
src/port/items/: CnPortBaseItem.cpp  CnPortBaseItem.h  CnPortCfgItem.h  CnPortCmdItem.h  CnPortSetItem.h  CnPortStatItem.h
src/ua/app/: CnUaApp.cpp  CnUaApp.h  CnUaThread.cpp  CnUaThread.h
src/ua/core/: CnUaCore.cpp  CnUaCore.h  CnUaServer.cpp  CnUaServer.h
src/ua/device/: CnUaDevice.cpp  CnUaDevice.h
src/ua/device/items/: CnUaDeviceItemList.cpp  CnUaDeviceItemList.h
src/ua/device/messages/: CnUaDeviceMessage.cpp  CnUaDeviceMessage.h  CnUaDeviceMessageList.cpp  CnUaDeviceMessageList.h
src/ua/port/: CnUaPort.cpp  CnUaPort.h
tests/: CMakeLists.txt  README.md  gtest_dependency.cmake
tests/app/: CnAppConfig_test.cpp  CnApp_test.cpp
tests/cfg/: CnCfgBuilder_test.cpp  CnCfgDeviceItemParser_test.cpp  CnCfgDeviceItem_test.cpp  CnCfgDevice_test.cpp  CnCfgPort_test.cpp  CnCfgProject_test.cpp
tests/core/: CnBaseItem_test.cpp  CnConfReader_test.cpp  CnDateTime_test.cpp  CnDir_test.cpp  CnFileInfo_test.cpp  CnFile_test.cpp  CnItemCsvReader_test.cpp  CnItemLexer_test.cpp  CnModbusClient_test.cpp  CnModbus_test.cpp  CnString_test.cpp  CnTimestamp_test.cpp  CnUtils_test.cpp  CnVariant_test.cpp
tests/device/: CnDeviceCfgItem_test.cpp  CnDeviceCmdItem_test.cpp  CnDeviceConfig_test.cpp  CnDeviceItemList_test.cpp  CnDeviceMessageList_test.cpp  CnDeviceMessage_test.cpp  CnDeviceModbusItem_test.cpp  CnDeviceSetItem_test.cpp  CnDeviceStatItem_test.cpp  CnDeviceStat_test.cpp  CnDevice_test.cpp
tests/global/: global_test.cpp  global_test.h
tests/include/std/: CnStd_filesystem.h
tests/log/: CnLoggerFile_test.cpp  CnLoggerManager_test.cpp  CnLogger_test.cpp
tests/port/: CnPortConfig_test.cpp  CnPortStat_test.cpp
tests/ua/: CnUaCore_test.cpp
