if(WIN32)
    # Add Windows MSI installer
    add_subdirectory(windows)
else()
	is_linux_family("debian" CN_LINUX_IS_DEBIAN_LIKE)
	if (CN_LINUX_IS_DEBIAN_LIKE)
		add_subdirectory(linux/deb)
    else()
        is_linux_family("fedora" CN_LINUX_IS_FEDORA_LIKE)
        if (CN_LINUX_IS_FEDORA_LIKE)
            add_subdirectory(linux/rpm)
        endif()
	endif()
endif()
