if(WIN32)
    # Add Windows MSI installer
    add_subdirectory(windows)
else()
	is_linux_family("debian" CN_LINUX_IS_DEBIAN_LIKE)
	if (CN_LINUX_IS_DEBIAN_LIKE)
        message(STATUS "CN-LINUX: Debian family detected")
		add_subdirectory(linux/deb)
    else()
        is_linux_family("fedora" CN_LINUX_IS_FEDORA_LIKE)
        if (CN_LINUX_IS_FEDORA_LIKE)
            message(STATUS "CN-LINUX: Fedora family detected")
            add_subdirectory(linux/rpm)
        else()
            message(WARNING "CN-LINUX: Unsupported Linux distribution. Installer will not be generated.")
        endif()
	endif()
endif()
